# projet_image_2A

./: .gitignore  autres_methodes.docx
CPP/Devs/: Devs.sln
CPP/Devs/libIPSI2/: libIPSI2.vcxproj.filters
CPP/Devs/test/: ecartTypeLocaux.cpp  evalgandin_principal.cpp  priseEnMainClasse.cpp  seance4_main.cpp  seancecellulevoronoi.cpp
CPP/data/res/: cellulesE_SForme.csv  cellulesSeAuE_SForme.csv
CPP/include/: ImageClasse.h  ImageDouble.h  ImageNdg.h  libIHM.h
CPP/src/: ImageClasse.cpp  ImageCouleur.cpp  ImageDouble.cpp  ImageNdg.cpp  libIHM.cpp
IHM/: IHM.sln
IHM/IHM/: Form1.Designer.cs  Form1.cs  Form1.resx  IHM.csproj
IHM/IHM/Properties/: AssemblyInfo.cs
IHM/ProjetCPP/: ClImage.cs  Form1.Designer.cs  Form1.cs  Program.cs
IHM/libImage/: libImage.vcxproj  libImage.vcxproj.filters
closedCV/: .clang-format  CMakeLists.txt  main.cpp  makefile  rebuild.sh
closedCV/include/: ImageClasse.hpp  ImageCouleur.hpp  ImageDouble.hpp  ImageNdg.hpp
closedCV/source/: ImageClasse.cpp  ImageCouleur.cpp  ImageDouble.cpp  ImageNdg.cpp
codes Séance 2/Devs/libIPSI2/: libIPSI2.vcxproj
codes Séance 2/Devs/test/: integrale.cpp  priseEnMain.cpp  test.cpp  test.vcxproj  test.vcxproj.filters
codes Séance 2/include/: ImageClasse.h  ImageDouble.h
codes Séance 2/src/: ImageDouble.cpp  ImageNdg.cpp
include/: ImageCouleur.h  ImageNdg.h
src/: ImageNdg.cpp
